feat: upgrade to latest terraform-bridge provider

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -22,6 +22,8 @@
         "provider.ts",
         "repository.ts",
         "role.ts",
+        "shareRepository.ts",
+        "shareRepositoryWithAll.ts",
         "types/index.ts",
         "types/input.ts",
         "types/output.ts",
